# fog-collector-updater

./: pyproject.toml
client/: graph.js  test.html
fog_data_updater/: update.py
server/: pyproject.toml
server/fog_data_updater/: update.py
tests/: test_fog_data_updater.py
