[tool.poetry]
name = "fog-data-updater"
version = "0.1.0"
description = ""
authors = ["Olivia Driscoll <odriscol@ucsc.edu>"]

[tool.poetry.scripts]
updater = "fog_data_updater.update:main"

[tool.poetry.dependencies]
python = ">=3.7,<4"
requests = "^2.28"
google-api-python-client = "^2.56.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^0.5.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
